# lcd-toy-project

./: .gitignore  CMakeLists.txt  README.md
basic_io/: CMakeLists.txt  TextConsole.cpp  TextConsole.hpp  bsio.cpp  bsio.hpp
basic_io/console/: CMakeLists.txt  TextConsole.cpp  TextConsole.hpp  TextOut.hpp  TileBuffer.hpp  TileDef.h
basic_io/console/details/: tile_blitting.cpp  tile_blitting.hpp
basic_io/console/glyphs/: letters.hpp  print.hpp
basic_io/gamepad/: CMakeLists.txt  gamepad.cpp  gamepad.hpp
basic_io/keyboard/: CMakeLists.txt  TinyUsbKeyboard.cpp  TinyUsbKeyboard.hpp  keyboard.cpp  keyboard.hpp  keyboard_interface.h
basic_io/screen/: CMakeLists.txt  TileBuffer.hpp  TileDef.h  constexpr_tile_utils.hpp  display.cpp  display.hpp  screen.cpp  screen.hpp  screen_def.h  tile.cpp  tile.hpp  tile_blitting.cpp  tile_blitting.hpp
basic_io/screen/details/: tile_manip.hpp
basic_io/screen/gfx/: defs.hpp  shapes.cpp  shapes.hpp
basic_io/screen/glyphs/: bit_manip.hpp  letters.hpp
basic_io/screen/waveshare_driver/: CMakeLists.txt  dispWaveshareLcd.c  dispWaveshareLcd.h  display_impl.cpp  rp2040.h  screen_def.h  screen_impl.cpp  screen_impl.hpp  screensize.h
ben-shell/: CMakeLists.txt
ben-shell/examples/: main.c
ben-shell/src/: Shell.c  Shell.h
ben_shell/examples/: CMakeLists.txt
ben_shell/src/: Shell.c  Shell.h
driver/: CMakeLists.txt  LICENSE  README.md  dispWaveshareLcd.c  dispWaveshareLcd.h  rp2040.h
embp/: CMakeLists.txt  LICENSE  README.md
embp/include/embp/: circular_array.hpp  circular_iterator.hpp  constexpr_numeric.hpp  containers.hpp  utility.hpp
embp/include/embp/details/: containers_common.hpp
embp/tests/: CMakeLists.txt  add_unit_test.cmake  circular_array_test.cc  test_utils.hh  utility_test.cc  variable_array_test.cc
glyphs/: bit_manip.hpp  letters.hpp  print.hpp
sdl/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ShellCmd_Menu.cpp  ShellCmd_Menu.hpp  TextOut.hpp  VideoBuf.hpp  demo.cpp  demo.hpp  hid_app.cpp  main.cpp  main_alt.cpp  main_blink.cpp  screen_utils.cpp  snake.cpp  snake.hpp  snake_common.hpp  snake_levels_constexpr.hpp  snake_tiles_constexpr.hpp  status_utilities.cpp  status_utilities.hpp  utilities.hpp
src/common/: BitImage.hpp  Cursor.hpp  Grid.hpp  pico_sdk_timer_details.hpp  screen_utils.hpp  timer.hpp  utilities.hpp
src/revenge/: revenge.cpp  revenge.hpp  revenge_defs.hpp  revenge_tiles.hpp
src/snake/: snake.cpp  snake_common.hpp  snake_levels_constexpr.hpp
src/tetris/: BitImage.hpp  tetris.cpp  tetris.hpp  tetris_defs.hpp  tetris_tiles_constexpr.hpp
src/tetris/background_tiles/: tetris_bkgrnd_lvl_1.hpp  tetris_bkgrnd_lvl_10.hpp  tetris_bkgrnd_lvl_2.hpp  tetris_bkgrnd_lvl_3.hpp  tetris_bkgrnd_lvl_4.hpp  tetris_bkgrnd_lvl_5.hpp  tetris_bkgrnd_lvl_6.hpp  tetris_bkgrnd_lvl_7.hpp  tetris_bkgrnd_lvl_8.hpp  tetris_bkgrnd_lvl_9.hpp  tiles.hpp
tests/: CMakeLists.txt  tile_blitting.cc
tools/: revenge_img_to_cpp.py  tetris_img_to_cpp.py
